# reddiscordbot

./: .replit  bot.sh  pyproject.toml
botdata/cogs/Audio/: Audio.db  Audio.db-shm  Audio.db-wal  settings.json
botdata/cogs/CustomCommands/: settings.json
botdata/cogs/Downloader/: settings.json
botdata/cogs/Downloader/lib/aiolimiter-1.0.0.dist-info/: RECORD
botdata/cogs/Downloader/lib/aiowowapi-2.1.1.dist-info/: RECORD
botdata/cogs/Downloader/lib/asyncache-0.3.0.dist-info/: RECORD
botdata/cogs/Downloader/lib/charset_normalizer-2.1.1.dist-info/: RECORD
botdata/cogs/Downloader/lib/google_auth_oauthlib-0.7.1.dist-info/: RECORD
botdata/cogs/Downloader/lib/gspread-5.5.0.dist-info/: RECORD
botdata/cogs/Downloader/lib/gspread_asyncio-1.7.1.dist-info/: RECORD
botdata/cogs/Downloader/lib/javascript-1!1.0.0.dist-info/: RECORD
botdata/cogs/Downloader/lib/mypy-0.982.dist-info/: RECORD
botdata/cogs/Downloader/lib/raiderio_async-1.1.1.dist-info/: METADATA  RECORD  direct_url.json  top_level.txt
botdata/cogs/Downloader/lib/rapidfuzz-2.13.2.dist-info/: RECORD
botdata/cogs/Downloader/lib/rsa-4.9.dist-info/: RECORD
botdata/cogs/Downloader/lib/tabulate-0.9.0.dist-info/: RECORD
botdata/cogs/Downloader/lib/types_cachetools-5.2.1.dist-info/: RECORD
botdata/cogs/Mod/: settings.json
botdata/cogs/ModLog/: settings.json
botdata/cogs/RepoManager/: settings.json
botdata/core/: settings.json
