[tool.poetry]
name = "repl_python3_Reddiscordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
adventure = "^1.6"
jishaku = "^2.5.1"
tabulate = "^0.9.0"
validators = "^0.20.0"
jsonpickle = "^2.2.0"
aiosmtplib = "^2.0.0"
dateparser = "^1.1.3"
motor = "^3.1.1"
Babel = "^2.11.0"
iso8601 = "^1.1.0"
pandas = "^1.5.1"
click = "^8.1.3"
importlib-metadata = "^5.0.0"
Jinja2 = "^3.1.2"
psutil = "^5.9.4"
youtube_dl = "^2021.12.17"
braceexpand = "^0.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
